2010-08-17  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc: fixed coredump on --log=unopenable-file.
	* FileAccess.cc, ftpclass.cc, Http.cc, LocalAccess.cc: carefully
	  save errno value.

2010-06-10  Alexander V. Lukyanov <lav@yars.free.net>

	* Timer.cc: fixed Reset for timer which have been just Stop()ped.
	* commands.cc: document (repeat) options.

2010-06-09  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc, Torrent.h: don't try to re-download invalid piece
	  from the same peer; black-list peers with many invalid pieces.

2010-06-09  Claus K. Larsen <ckl@bankdata.dk>

	* xstring.h: include unistd.h to workaround truncate64 problem on aix.

2010-06-04  gabriele balducci <balducci@dschgrazlin2.units.it>

	* ftpclass.cc: fixed a problem with zeroed errno.

2010-06-02  Alexander V. Lukyanov <lav@yars.free.net>

	* CopyJob.cc: use no_status flag.
	* CopyJob.h: (NoStatus) accept optional parameter.
	* OutputJob.cc: pass no_status flag.

2010-05-24  Alexander V. Lukyanov <lav@yars.free.net>

	* GetJob.cc: fixed get/mget -c with xfer:clobber=no.

2010-05-20  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: workaround for servers with LANG but without UTF8
	  (original patch by Henry Hu <henry.hu.sh@gmail.com>).

2010-04-30  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc, FileCopy.h, pgetJob.cc: (do_verify) new flag; unset it
	  for pget chunks.

2010-04-28  Alexander V. Lukyanov <lav@yars.free.net>

	* misc.cc, misc.h: (random_init, random01) new functions.
	* ResMgr.cc: use them.
	* TimeDate.cc, TimeDate.h: (TimeDiff::valueOf) new static method.
	* Timer.cc, Timer.h: (AddRandom) new method for randomization.
	* Torrent.cc: randomize peer connections in time.

2010-04-19  Alexander V. Lukyanov <lav@yars.free.net>

	* GetJob.cc: make xfer:clobber=no by default.
	* FileCopy.cc, FileCopy.h: fixed retries counting on upload;
	  track upload watermark.
	* ftpclass.cc: handle 426 reply on upload specially;