@@ -538,7 +538,8 @@ bool ResMgr::Resource::ClosureMatch(const char *cl_data)
       return true;
    if(!(closure && cl_data))
       return false;
-   return 0==fnmatch(closure,cl_data,FNM_PATHNAME);
+   return 0==fnmatch(closure,cl_data,FNM_PATHNAME)
+      || (closure[0]=='*' && closure[1]=='.' && !strcmp(closure+2,cl_data));
 }
 
 const char *ResMgr::QueryNext(const char *name,const char **closure,Resource **ptr)
